# biobank_nimc_drf

./: .env  .gitignore  docker-compose-dev.yml  pyproject.toml
backend/: db.sqlite3
backend/apps/: middleware.py
backend/apps/family/: filters.py  models.py  selectors.py  serializer.py  services.py  urls.py  views.py
backend/apps/file/: models.py  serializer.py  services.py
backend/apps/individ/: admin.py  apps.py  filters.py  models.py  selectors.py  serializer.py  services.py  urls.py  views.py
backend/apps/individ/embryo/: admin.py  apps.py  models.py  selectors.py  serializer.py  services.py  urls.py  views.py
backend/apps/individ/father/: admin.py  apps.py  models.py  serializer.py
backend/apps/individ/mother/: admin.py  apps.py  models.py  serializer.py
backend/apps/individ/services/: another_member.py  embryo.py  father.py  mother.py
backend/apps/laboratory/: models.py  selectors.py  serializers.py  urls.py  views.py
backend/apps/sample/: admin.py  models.py  selectors.py  serializer.py  urls.py  validators.py  views.py
backend/apps/storage/: admin.py  models.py  selectors.py  serializer.py  urls.py  views.py
backend/apps/user/: middleware.py  models.py  serializer.py  urls.py  views.py
backend/config/: settings.py  urls.py  wsgi.py
docker/backend/: Dockerfile  wsgi-entrypoint.sh
docker/nginx/development/: default.conf
frontend/: biobank_base.html  package-lock.json  package.json  wget-log
frontend/src/: App.css  App.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: Modal.js
media/upload/embryo_files/: test.html
(+117 files in other folders)
